--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
       --slot-border-w: 2px;
       --slot-fill: #ead7be;
 
-      /* ===== Einheitliches Box-Schwarz ===== */
-      --box-black: #000;
-      --box-border: 4px;
-      --box-radius: 0px;
+      --board-border: 4px;
+      --board-border-color: #000;
+      --board-radius: clamp(14px, 2.2vmin, 22px);
 
       --btn-bg: #ead7be;
       --btn-text: #2a160c;
@@ -40,15 +39,6 @@
       /* ===== UI (Variante A: Rostton) ===== */
       --ui-panel-bg: #7a3f2b;
       --ui-text: #ead7be;
-
-      /* Kippspeed-Streifen Höhe: dynamisch = 3 Rasterzeilen */
-      --kippstrip-h: auto;
-
-      /* Corner-Tag */
-      --corner-tag-color: rgba(234, 215, 190, 0.70);
-
-      /* NEU: Abstand der Corner-Texte weg von der Innenecke (in Rasterzellen) */
-      --corner-inset: 1.60;
 
       --rotSign: 1;
       --rot: 0deg;
@@ -84,11 +74,10 @@
 
     .stage{
       width: min(94vw, 680px);
-      margin-top: 4vh;
-      padding-bottom: 2vh;
+      margin-top: 8vh;
       display:flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 14px;
       justify-content:flex-start;
       align-items:center;
     }
@@ -106,30 +95,11 @@
       padding: 0;
       font-weight: 1000;
       letter-spacing: 0.06em;
-      font-size: clamp(26px, 6.4vmin, 46px);
+      font-size: clamp(18px, 4.6vmin, 34px);
       color: rgba(0,0,0,0.92);
       text-shadow:
         0 1px 0 rgba(255,255,255,0.35),
         0 10px 18px rgba(0,0,0,0.25);
-    }
-
-    /* ===== gemeinsame BoxShell (Board + Sliderpanel) ===== */
-    .boxShell{
-      width: 100%;
-      box-sizing: border-box;
-
-      background: var(--box-black);
-      border: var(--box-border) solid var(--box-black);
-      border-radius: var(--box-radius);
-
-      box-shadow:
-        10px 18px 42px rgba(0,0,0,0.55),
-        3px 6px 16px rgba(0,0,0,0.35);
-
-      overflow: hidden;
-      display:flex;
-      flex-direction: column;
-      gap: 0;
     }
 
     .board{
@@ -138,14 +108,17 @@
       height: 0;
       aspect-ratio: 1 / 1;
       box-sizing: border-box;
-
-      background: var(--box-black);
-      border: 0;
-      border-radius: 0;
+      background: #0b0b0b;
+      border: var(--board-border) solid var(--board-border-color);
+      border-radius: var(--board-radius);
       overflow: visible;
 
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
       --step: calc(var(--cell) + var(--cell-gap));
+
+      box-shadow:
+        10px 18px 42px rgba(0,0,0,0.55),
+        3px 6px 16px rgba(0,0,0,0.35);
     }
 
     .grid{
@@ -160,10 +133,10 @@
     }
 
     .cell{
-      background: var(--box-black);
+      background:#0b0b0b;
       border-radius: var(--cell-radius);
       box-sizing: border-box;
-      box-shadow: none;
+      box-shadow: 0 0 0 1px rgba(255,255,255,0.02) inset;
     }
 
     .c-orange{ background: var(--orange); }
@@ -175,38 +148,6 @@
       box-shadow:
         inset 0 0 0 2px #000,
         0 0 0 1px rgba(0,0,0,0.25);
-    }
-
-    /* ===== Corner Tags: NUR oben links & oben rechts, weiter weg von der Innenecke ===== */
-    .cornerTag{
-      position:absolute;
-      z-index: 6;
-      pointer-events:none;
-      user-select:none;
-      color: var(--corner-tag-color);
-      font-weight: 900;
-      letter-spacing: 0.03em;
-      font-size: clamp(14px, 2.5vmin, 20px);
-      text-shadow: 0 1px 0 rgba(0,0,0,0.35);
-      white-space: nowrap;
-    }
-    .cornerTag .kipp{ text-transform: uppercase; }
-    .cornerTag .color{ text-transform: lowercase; font-weight: 800; letter-spacing: 0.02em; }
-
-    /* FIX:
-       - beide mit translate(-50%, -50%) -> bleiben IM Board sichtbar
-       - inset über --corner-inset -> weiter weg von der Innenecke */
-    .cornerTag.tl{
-      left: calc(var(--corner-inset) * var(--step));
-      top:  calc(var(--corner-inset) * var(--step));
-      transform: translate(-50%, -50%) rotate(-45deg);
-      transform-origin: 50% 50%;
-    }
-    .cornerTag.tr{
-      left: calc((8 - var(--corner-inset)) * var(--step));
-      top:  calc(var(--corner-inset) * var(--step));
-      transform: translate(-50%, -50%) rotate(45deg);
-      transform-origin: 50% 50%;
     }
 
     .floor{
@@ -265,6 +206,22 @@
     }
 
     .hidden{ display:none !important; }
+
+    /* ===== Pfeil Overlay (NEU) ===== */
+    .kippArrow{
+      position:absolute;
+      z-index: 8;            /* über Würfel+Slots */
+      pointer-events:none;
+      user-select:none;
+
+      /* Größe: ca. gut sichtbar ohne Slider zu zerstören.
+         Wenn du später noch feinjustieren willst: dieser Faktor ist der Regler. */
+      width: calc(var(--cell) * 2.35);
+      height: auto;
+
+      opacity: 1;
+      filter: drop-shadow(0 1px 0 rgba(255,255,255,0.10)) drop-shadow(0 3px 6px rgba(0,0,0,0.25));
+    }
 
     .cubeShadow{
       position:absolute;
@@ -391,13 +348,11 @@
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* W Vollansicht Slots */
     .s-3b{ left: calc(1 * var(--step)); top: calc(2 * var(--step)); }
     .s-4b{ left: calc(1 * var(--step)); top: calc(3 * var(--step)); }
     .s-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
     .s-2d{ left: calc(3 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* KIP Darstellung */
     .kipScale{
       position:absolute;
       inset:0;
@@ -448,49 +403,36 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* ===== Kippspeed Panel ===== */
     .kippspeedBlock{
       width: 100%;
-      height: var(--kippstrip-h);
-      background: var(--box-black);
-      user-select:none;
-
       display:flex;
       flex-direction: column;
-      justify-content: center;
       gap: 6px;
+      user-select:none;
     }
 
     .kippspeedLabel{
       font-weight: 1000;
       letter-spacing: 0.10em;
       text-transform: uppercase;
-      color: var(--ui-text);
-      text-shadow: 0 1px 0 rgba(0,0,0,0.35);
+      color: rgba(0,0,0,0.88);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.22);
       font-size: 16px;
       line-height: 1.05;
-      text-align: center;
     }
 
     .sliderRow{
       display:flex;
       align-items:center;
       gap: 14px;
-      padding: 0 12px;
     }
 
     .speedIcon{
-      width: clamp(44px, 10vmin, 62px);
-      height: clamp(44px, 10vmin, 62px);
-      opacity: 0.98;
+      width: clamp(32px, 8vmin, 44px);
+      height: clamp(32px, 8vmin, 44px);
+      opacity: 0.95;
       flex: 0 0 auto;
-
-      filter:
-        brightness(0) saturate(100%)
-        invert(90%) sepia(16%) saturate(330%)
-        hue-rotate(355deg) brightness(105%) contrast(95%)
-        drop-shadow(0 1px 0 rgba(0,0,0,0.35))
-        drop-shadow(0 2px 6px rgba(0,0,0,0.25));
+      filter: drop-shadow(0 1px 0 rgba(255,255,255,0.18)) drop-shadow(0 2px 4px rgba(0,0,0,0.22));
     }
 
     input[type="range"]{
@@ -499,12 +441,10 @@
       width: 100%;
       height: 10px;
       border-radius: 999px;
-      background: var(--ui-panel-bg);
+      background: #000;
       outline: none;
       border: 1px solid #000;
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,0.10) inset,
-        0 1px 0 rgba(0,0,0,0.35) inset;
+      box-shadow: 0 0 0 1px rgba(255,255,255,0.18) inset;
     }
     input[type="range"]::-webkit-slider-thumb{
       -webkit-appearance: none;
@@ -528,15 +468,12 @@
       cursor: pointer;
     }
 
-    /* UI Panel */
     .uiPanel{
       width: 100%;
       box-sizing: border-box;
       padding: 12px 12px 10px;
       border-radius: 16px;
-
       background: var(--ui-panel-bg);
-
       box-shadow:
         inset 0 0 0 4px #000,
         0 12px 22px rgba(0,0,0,0.22),
@@ -671,59 +608,55 @@
   <div class="stage">
 
     <div class="title" aria-label="Titel">
-      <h1>DigiKIPP</h1>
+      <h1>DigiKipp</h1>
     </div>
 
-    <div class="boxShell" id="boxShell" aria-label="BoxShell">
-      <div class="board" id="board">
+    <div class="board" id="board">
+      <div class="floor" aria-hidden="true"></div>
+      <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-        <!-- Corner subtitles: nur oben -->
-        <div class="cornerTag tl"><span class="kipp">KIPP</span> <span class="color">color</span></div>
-        <div class="cornerTag tr"><span class="kipp">KIPP</span> <span class="color">color</span></div>
+      <div id="wFaceGroup" class="wFaceGroup" aria-label="W Paket">
+        <div class="cubeShadow" aria-hidden="true"></div>
+        <div class="cubeFace" aria-label="Würfelfläche"></div>
 
-        <div class="floor" aria-hidden="true"></div>
-        <div id="grid" class="grid" aria-label="8×8 Raster"></div>
-
-        <div id="wFaceGroup" class="wFaceGroup" aria-label="W Paket">
-          <div class="cubeShadow" aria-hidden="true"></div>
-          <div class="cubeFace" aria-label="Würfelfläche"></div>
-
-          <div class="slot s-3b read-west"  data-slot="S1"><div class="num"><span></span></div></div>
-          <div class="slot s-4b read-west"  data-slot="S2"><div class="num"><span></span></div></div>
-          <div class="slot s-2c read-north" data-slot="S3"><div class="num"><span></span></div></div>
-          <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
-        </div>
-
-        <div id="kipGroup" class="kipGroup hidden" aria-label="KIP Gruppe">
-          <div class="kipScale">
-            <div class="kipShadow" aria-hidden="true"></div>
-            <div class="kipEdgeCore" aria-hidden="true"></div>
-
-            <div class="cubeFace kipFaceQ0" aria-label="Würfelfläche Q0"></div>
-            <div class="cubeFace kipFaceQ1" aria-label="Würfelfläche Q1"></div>
-
-            <div class="slot k-4d read-east"  data-slot="W2_A"><div class="num"><span></span></div></div>
-            <div class="slot k-3d read-east"  data-slot="W2_B"><div class="num"><span></span></div></div>
-            <div class="slot k-2b read-north" data-slot="W2_C"><div class="num"><span></span></div></div>
-            <div class="slot k-2c read-north" data-slot="W2_D"><div class="num"><span></span></div></div>
-
-            <div class="slot k-3e read-west"  data-slot="W1_1"><div class="num"><span></span></div></div>
-            <div class="slot k-4e read-west"  data-slot="W1_2"><div class="num"><span></span></div></div>
-            <div class="slot k-2f read-north" data-slot="W1_3"><div class="num"><span></span></div></div>
-            <div class="slot k-2g read-north" data-slot="W1_4"><div class="num"><span></span></div></div>
-          </div>
-        </div>
-
-        <div class="ball" aria-label="Kugel"></div>
+        <div class="slot s-3b read-west"  data-slot="S1"><div class="num"><span></span></div></div>
+        <div class="slot s-4b read-west"  data-slot="S2"><div class="num"><span></span></div></div>
+        <div class="slot s-2c read-north" data-slot="S3"><div class="num"><span></span></div></div>
+        <div class="slot s-2d read-north" data-slot="S4"><div class="num"><span></span></div></div>
       </div>
 
-      <div class="kippspeedBlock" id="kippspeedBlock" aria-label="Kippspeed">
-        <div class="kippspeedLabel">KIPPSPEED</div>
-        <div class="sliderRow">
-          <img class="speedIcon" src="kippspeed_snail_tight.png" alt="langsam">
-          <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Speed Slider">
-          <img class="speedIcon" src="kippspeed_hase_tight.png" alt="schnell">
+      <div id="kipGroup" class="kipGroup hidden" aria-label="KIP Gruppe">
+        <div class="kipScale">
+          <div class="kipShadow" aria-hidden="true"></div>
+          <div class="kipEdgeCore" aria-hidden="true"></div>
+
+          <div class="cubeFace kipFaceQ0" aria-label="Würfelfläche Q0"></div>
+          <div class="cubeFace kipFaceQ1" aria-label="Würfelfläche Q1"></div>
+
+          <div class="slot k-4d read-east"  data-slot="W2_A"><div class="num"><span></span></div></div>
+          <div class="slot k-3d read-east"  data-slot="W2_B"><div class="num"><span></span></div></div>
+          <div class="slot k-2b read-north" data-slot="W2_C"><div class="num"><span></span></div></div>
+          <div class="slot k-2c read-north" data-slot="W2_D"><div class="num"><span></span></div></div>
+
+          <div class="slot k-3e read-west"  data-slot="W1_1"><div class="num"><span></span></div></div>
+          <div class="slot k-4e read-west"  data-slot="W1_2"><div class="num"><span></span></div></div>
+          <div class="slot k-2f read-north" data-slot="W1_3"><div class="num"><span></span></div></div>
+          <div class="slot k-2g read-north" data-slot="W1_4"><div class="num"><span></span></div></div>
         </div>
+      </div>
+
+      <!-- ✅ Pfeil Overlay (NEU) -->
+      <img id="kippArrow" class="kippArrow hidden" src="kipp_arrow_pictogram_cropped_tight.png" alt="Kipp-Pfeil" />
+
+      <div class="ball" aria-label="Kugel"></div>
+    </div>
+
+    <div class="kippspeedBlock" aria-label="Kippspeed">
+      <div class="kippspeedLabel">KIPPSPEED</div>
+      <div class="sliderRow">
+        <img class="speedIcon" src="kippspeed_snail.png" alt="langsam">
+        <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Speed Slider">
+        <img class="speedIcon" src="kippspeed_hase.png" alt="schnell">
       </div>
     </div>
 
@@ -756,6 +689,9 @@
     const btnStart  = document.getElementById("btnStart");
     const speedSlider = document.getElementById("speedSlider");
 
+    // ✅ Pfeil
+    const kippArrow = document.getElementById("kippArrow");
+
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
     function setBoardSquare(){
@@ -763,15 +699,9 @@
       boardEl.style.height = w + "px";
     }
 
-    function setKippspeedStripHeight(){
-      const w = Math.round(boardEl.getBoundingClientRect().width);
-      const cell = w / 8;
-      const h = Math.round(cell * 3);
-      document.documentElement.style.setProperty("--kippstrip-h", h + "px");
-    }
-
+    /* Speed -> echte Dauersteuerung */
     function getTiming(){
-      const v = Number(speedSlider.value || 3);
+      const v = Number(speedSlider.value || 3); // 0..9
       const holdMsFull = Math.max(800, Math.round(3200 - v * 266));
       const holdMsKip  = Math.max(520, Math.round(2200 - v * 186));
       return { holdMsFull, holdMsKip };
@@ -880,6 +810,7 @@
       return pool.slice(0, count);
     }
 
+    // ===== GOLDENE LOGIK =====
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -1000,13 +931,88 @@
 
       [...slotTargetsW, ...slotTargetsKipRight, ...slotTargetsKipLeft].forEach(clearSpan);
       setRotationSnap();
+
+      updateArrowPlacement(); // ✅
     }
 
     function advanceFullCW(){
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
+      updateArrowPlacement(); // ✅
     }
 
+    // =========================
+    // ✅ PFEIL-LOGIK (NEU)
+    // =========================
+
+    function colIndex(letter){
+      return cols.indexOf(letter) + 1; // A=1..H=8
+    }
+
+    function cellTopLeftPx(row, colLetter){
+      // linke obere Ecke eines Rasterquadrats (in px relativ zur board)
+      const x = (colIndex(colLetter) - 1) * getStepPx();
+      const y = (row - 1) * getStepPx();
+      return { x, y };
+    }
+
+    function getStepPx(){
+      const cs = getComputedStyle(boardEl);
+      const step = parseFloat(cs.getPropertyValue("--step"));
+      return isFinite(step) ? step : 0;
+    }
+
+    function showArrow(on){
+      if(on) kippArrow.classList.remove("hidden");
+      else kippArrow.classList.add("hidden");
+    }
+
+    function updateArrowPlacement(){
+      // Mapping gemäß deiner Regeln (rotIndex = 0..3)
+      // Jede Map: anchorCell, anchorCorner, rotationDeg (clockwise)
+      const map = [
+        // Q0
+        { cell: { r:3, c:"B" }, corner:"SW", deg: 0 },
+        // Q1
+        { cell: { r:2, c:"F" }, corner:"NW", deg: 90 },
+        // Q2
+        { cell: { r:6, c:"G" }, corner:"NE", deg: 180 },
+        // Q3
+        { cell: { r:7, c:"C" }, corner:"SW", deg: 270 },
+      ][rotIndex];
+
+      const step = getStepPx();
+      const tl = cellTopLeftPx(map.cell.r, map.cell.c);
+
+      let x = tl.x, y = tl.y;
+      let origin = "0% 0%";
+      let preTranslate = "";
+
+      if(map.corner === "NW"){
+        // x,y bleibt tl
+        origin = "0% 0%";
+        preTranslate = "translate(0, 0)";
+      } else if(map.corner === "SW"){
+        // anchor ist unten links
+        x = tl.x;
+        y = tl.y + step;
+        origin = "0% 100%";
+        preTranslate = "translate(0, -100%)";
+      } else if(map.corner === "NE"){
+        // anchor ist oben rechts
+        x = tl.x + step;
+        y = tl.y;
+        origin = "100% 0%";
+        preTranslate = "translate(-100%, 0)";
+      }
+
+      kippArrow.style.left = x + "px";
+      kippArrow.style.top  = y + "px";
+      kippArrow.style.transformOrigin = origin;
+      kippArrow.style.transform = `${preTranslate} rotate(${map.deg}deg)`;
+    }
+
+    // ===== SHOW: 7 Bilder, W-Flächen halb leer / halb bestückt =====
     let running = false;
 
     async function runShow7(){
@@ -1019,47 +1025,70 @@
 
       reroll12_keepEmpty();
 
+      // 1) W1 leer (halbe Zeit) + Pfeil AN
       showW();
       renderWEmpty();
+      updateArrowPlacement();
+      showArrow(true);
       await sleep(halfFull);
 
+      // 2) W1 bestückt (halbe Zeit) + Pfeil AUS
       ensureAssigned(0);
       renderW(true);
+      showArrow(false);
       await sleep(halfFull);
 
+      // 3) KIP W1 -> W2 + Pfeil AUS
       showKip();
+      showArrow(false);
       renderKip();
       await sleep(holdMsKip);
 
+      // 4) W2 leer (halbe Zeit) + Pfeil AN
       advanceFullCW();
       showW();
       renderWEmpty();
+      updateArrowPlacement();
+      showArrow(true);
       await sleep(halfFull);
 
+      // 5) W2 bestückt (halbe Zeit) + Pfeil AUS
       ensureAssigned(1);
       renderW(true);
+      showArrow(false);
       await sleep(halfFull);
 
+      // 6) KIP W2 -> W3 + Pfeil AUS
       showKip();
+      showArrow(false);
       renderKip();
       await sleep(holdMsKip);
 
+      // 7) W3 leer (halbe Zeit) + Pfeil AN
       advanceFullCW();
       showW();
       renderWEmpty();
+      updateArrowPlacement();
+      showArrow(true);
       await sleep(halfFull);
 
+      // 8) W3 bestückt (halbe Zeit) + Pfeil AUS
       ensureAssigned(2);
       renderW(true);
+      showArrow(false);
       await sleep(halfFull);
 
+      // 9) KIP W3 -> W1 + Pfeil AUS
       showKip();
+      showArrow(false);
       renderKip();
       await sleep(holdMsKip);
 
+      // Ende: W1 wieder oben (bestückt), Pfeil AUS
       advanceFullCW();
       showW();
       renderW(false);
+      showArrow(false);
 
       btnStart.textContent = "ZAHLEN NEU SETZEN";
       btnStart.disabled = false;
@@ -1075,21 +1104,17 @@
 
       buildGridOnce();
 
-      setKippspeedStripHeight();
-      requestAnimationFrame(setKippspeedStripHeight);
-      setTimeout(setKippspeedStripHeight, 80);
-
       reroll12_keepEmpty();
       showW();
       renderWEmpty();
+      updateArrowPlacement();
+      showArrow(true); // Start: leerer Zustand -> Pfeil sichtbar
     });
 
     window.addEventListener("resize", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
-
-      setKippspeedStripHeight();
-      requestAnimationFrame(setKippspeedStripHeight);
+      updateArrowPlacement();
     });
   </script>
 </body>
