--- a/index.html
+++ b/index.html
@@ -193,9 +193,6 @@
     .cornerTag .kipp{ text-transform: uppercase; }
     .cornerTag .color{ text-transform: lowercase; font-weight: 800; letter-spacing: 0.02em; }
 
-    /* FIX:
-       - beide mit translate(-50%, -50%) -> bleiben IM Board sichtbar
-       - inset über --corner-inset -> weiter weg von der Innenecke */
     .cornerTag.tl{
       left: calc(var(--corner-inset) * var(--step));
       top:  calc(var(--corner-inset) * var(--step));
@@ -447,6 +444,19 @@
     .k-4e{ left: calc(4 * var(--step)); top: calc(3 * var(--step)); }
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
+
+    /* ===== NEU: KIPP-PFEIL (oberste Ebene) ===== */
+    .kippArrow{
+      position:absolute;
+      left: 0;
+      top: 0;
+      z-index: 999;          /* wirklich über allem */
+      pointer-events: none;
+      user-select: none;
+      opacity: 0;
+      will-change: transform, opacity;
+      filter: drop-shadow(0 2px 6px rgba(0,0,0,0.35));
+    }
 
     /* ===== Kippspeed Panel ===== */
     .kippspeedBlock{
@@ -715,6 +725,10 @@
         </div>
 
         <div class="ball" aria-label="Kugel"></div>
+
+        <!-- ===== NEU: Pfeil (oberste Ebene, wird per JS positioniert/animiert) ===== -->
+        <!-- Wenn dein Dateiname anders ist: NUR hier ändern -->
+        <img id="kippArrow" class="kippArrow hidden" src="kipp_arrow_pictogram_cropped_tight.png" alt="">
       </div>
 
       <div class="kippspeedBlock" id="kippspeedBlock" aria-label="Kippspeed">
@@ -755,6 +769,10 @@
     const kipGroup  = document.getElementById("kipGroup");
     const btnStart  = document.getElementById("btnStart");
     const speedSlider = document.getElementById("speedSlider");
+
+    // ===== NEU: Arrow Element + Animation Handle =====
+    const kippArrow = document.getElementById("kippArrow");
+    let arrowAnim = null;
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
@@ -1000,6 +1018,9 @@
 
       [...slotTargetsW, ...slotTargetsKipRight, ...slotTargetsKipLeft].forEach(clearSpan);
       setRotationSnap();
+
+      // NEU: Pfeil sicher resetten
+      stopArrowHard();
     }
 
     function advanceFullCW(){
@@ -1007,6 +1028,122 @@
       faceIndex = (faceIndex + 1) % 3;
     }
 
+    // ==========================================================
+    // ===============  NEU: ARROW-ENGINE  =======================
+    // ==========================================================
+
+    function getStepPx(){
+      const w = boardEl.getBoundingClientRect().width;
+      return w / 8;
+    }
+
+    // Positionen nach deinem Anker-Regelwerk (Dateiecke auf Raster-Ecke)
+    // rotIndex: 0=Q0, 1=Q1, 2=Q2, 3=Q3 (rotDeg: 0,90,180,270)
+    function getArrowAnchorForRot(rotIdx){
+      // Raster-Koordinaten:
+      // 3B = row 3, col B (colIndex=1)
+      // 2F = row 2, col F (colIndex=5)
+      // 6G = row 6, col G (colIndex=6)
+      // 7C = row 7, col C (colIndex=2)
+
+      // Corner translation for anchoring the image corner to (x,y)
+      // SW: translate(0,-100%), NW: translate(0,0), NE: translate(-100%,0)
+      const SW = { tx: 0,   ty: -1 };
+      const NW = { tx: 0,   ty:  0 };
+      const NE = { tx: -1,  ty:  0 };
+
+      // Convert (row, colIndex, corner) into pixel anchor coordinate
+      const step = getStepPx();
+
+      function cellCorner(row, colIndex, corner){
+        const x0 = colIndex * step;
+        const y0 = (row - 1) * step;
+
+        // corners: NW (x0,y0), NE (x0+step,y0), SW (x0,y0+step), SE (x0+step,y0+step)
+        if(corner === "NW") return { x: x0,       y: y0 };
+        if(corner === "NE") return { x: x0+step,  y: y0 };
+        if(corner === "SW") return { x: x0,       y: y0+step };
+        return { x: x0+step, y: y0+step }; // SE fallback
+      }
+
+      if(rotIdx === 0){
+        // Q0: Pfeil 0°, Dateisüdwest an SW von 3B
+        const p = cellCorner(3, 1, "SW");
+        return { x:p.x, y:p.y, deg:0,  anchor:SW };
+      }
+      if(rotIdx === 1){
+        // Q1: Pfeil 90° im Uhrzeigersinn, Dateinordwest an NW von 2F
+        const p = cellCorner(2, 5, "NW");
+        return { x:p.x, y:p.y, deg:90, anchor:NW };
+      }
+      if(rotIdx === 2){
+        // Q2: Pfeil 180°, Dateinordost an NE von 6G
+        const p = cellCorner(6, 6, "NE");
+        return { x:p.x, y:p.y, deg:180, anchor:NE };
+      }
+      // Q3: Pfeil 270° im Uhrzeigersinn, Dateisüdwest an SW von 7C
+      const p = cellCorner(7, 2, "SW");
+      return { x:p.x, y:p.y, deg:270, anchor:SW };
+    }
+
+    function stopArrowHard(){
+      if(arrowAnim){
+        try{ arrowAnim.cancel(); }catch(e){}
+        arrowAnim = null;
+      }
+      kippArrow.classList.add("hidden");
+      kippArrow.style.opacity = "0";
+      kippArrow.style.transform = "none";
+    }
+
+    // Startet Pfeil:
+    // - sofort sichtbar (opacity 1)
+    // - sofort Fade (opacity 1 -> 0)
+    // - wandert in Kipprichtung über die Gesamtzeit
+    // Gesamtzeit = (Restzeit Vollansicht) + (Dauer Zwischenkipp)
+    function startArrowForThisRot(totalMs){
+      stopArrowHard();
+
+      const step = getStepPx();
+      const { x, y, deg, anchor } = getArrowAnchorForRot(rotIndex);
+
+      // Drift: ca. ~2 Raster nach innen in Kipprichtung (rotationsbasiert)
+      // Basisdrift für deg=0 (nach rechts/leicht nach oben), dann rotieren wir um 90° Schritte.
+      const baseDx = step * 1.95;
+      const baseDy = step * -0.20;
+
+      let dx = baseDx, dy = baseDy;
+      if(deg === 90){  dx = -baseDy; dy = baseDx; }
+      if(deg === 180){ dx = -baseDx; dy = -baseDy; }
+      if(deg === 270){ dx = baseDy;  dy = -baseDx; }
+
+      // Anchor translate in percent
+      const ax = anchor.tx * 100; // 0 oder -100
+      const ay = anchor.ty * 100; // 0 oder -100
+
+      // Base transform: position + anchor + rotation
+      const baseTransform = `translate(${x}px, ${y}px) translate(${ax}%, ${ay}%) rotate(${deg}deg)`;
+
+      kippArrow.classList.remove("hidden");
+
+      // Web Animations: linear movement + linear fade (1 -> 0)
+      arrowAnim = kippArrow.animate(
+        [
+          { transform: `${baseTransform} translate(0px, 0px)`, opacity: 1 },
+          { transform: `${baseTransform} translate(${dx}px, ${dy}px)`, opacity: 0 }
+        ],
+        {
+          duration: Math.max(200, totalMs),
+          easing: "linear",
+          fill: "forwards"
+        }
+      );
+
+      // Sicherheit: nach Ende wirklich verstecken (damit nichts „hängen bleibt“)
+      arrowAnim.onfinish = () => stopArrowHard();
+    }
+
+    // ===== SHOW: 7 Bilder, W-Flächen halb leer / halb bestückt + PFEIL-LOGIK =====
     let running = false;
 
     async function runShow7(){
@@ -1019,44 +1156,61 @@
 
       reroll12_keepEmpty();
 
+      // 1) W1 leer (halbe Zeit)
       showW();
       renderWEmpty();
       await sleep(halfFull);
 
+      // 2) W1 bestückt (halbe Zeit) + Pfeil startet sofort und läuft bis Ende der Zwischenkipp-Phase
       ensureAssigned(0);
       renderW(true);
+      startArrowForThisRot(halfFull + holdMsKip);
       await sleep(halfFull);
 
+      // 3) KIP W1 -> W2 (Zwischenkipp)
       showKip();
       renderKip();
       await sleep(holdMsKip);
+      // Pfeil wird automatisch fertig/hidden durch Animation, zur Sicherheit:
+      stopArrowHard();
 
+      // 4) W2 leer (halbe Zeit)
       advanceFullCW();
       showW();
       renderWEmpty();
       await sleep(halfFull);
 
+      // 5) W2 bestückt (halbe Zeit) + Pfeil
       ensureAssigned(1);
       renderW(true);
+      startArrowForThisRot(halfFull + holdMsKip);
       await sleep(halfFull);
 
+      // 6) KIP W2 -> W3
       showKip();
       renderKip();
       await sleep(holdMsKip);
+      stopArrowHard();
 
+      // 7) W3 leer (halbe Zeit)
       advanceFullCW();
       showW();
       renderWEmpty();
       await sleep(halfFull);
 
+      // 8) W3 bestückt (halbe Zeit) + Pfeil
       ensureAssigned(2);
       renderW(true);
+      startArrowForThisRot(halfFull + holdMsKip);
       await sleep(halfFull);
 
+      // 9) KIP W3 -> W1
       showKip();
       renderKip();
       await sleep(holdMsKip);
+      stopArrowHard();
 
+      // Ende: W1 wieder oben (bestückt)
       advanceFullCW();
       showW();
       renderW(false);
@@ -1090,6 +1244,9 @@
 
       setKippspeedStripHeight();
       requestAnimationFrame(setKippspeedStripHeight);
+
+      // Pfeil beim Resize sicher entfernen (damit nichts verspringt)
+      stopArrowHard();
     });
   </script>
 </body>
